; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_timeline.c_cacheline_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_timeline.c_cacheline_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_timeline_cacheline = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.intel_timeline_cacheline*)* @cacheline_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cacheline_release(%struct.intel_timeline_cacheline* %0) #0 {
  %2 = alloca %struct.intel_timeline_cacheline*, align 8
  store %struct.intel_timeline_cacheline* %0, %struct.intel_timeline_cacheline** %2, align 8
  %3 = load %struct.intel_timeline_cacheline*, %struct.intel_timeline_cacheline** %2, align 8
  %4 = icmp ne %struct.intel_timeline_cacheline* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load %struct.intel_timeline_cacheline*, %struct.intel_timeline_cacheline** %2, align 8
  %7 = getelementptr inbounds %struct.intel_timeline_cacheline, %struct.intel_timeline_cacheline* %6, i32 0, i32 0
  %8 = call i32 @i915_active_release(i32* %7)
  br label %9

9:                                                ; preds = %5, %1
  ret void
}

declare dso_local i32 @i915_active_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
